fixed spacing issues

--- a/src/screens/about/styles.css
+++ b/src/screens/about/styles.css
@@ -11,6 +11,7 @@
   flex-direction: row-reverse;
   justify-content: space-evenly;
   align-items: center;
+  overflow-y: hidden;
   height: 100%;
   width: 100%;
   z-index: 2;
@@ -105,7 +106,7 @@
 .about-text-container {
   z-index: 2;
   width: 50%;
-  padding: 0 5%;
+  padding: 0 5% 60px 5%;
 }
 
 .about-paragraph-title {
